RESOLVED FIXED292019
[Screen Time Refactoring] Apps glitch due to ScreenTimeWebExtension
https://bugs.webkit.org/show_bug.cgi?id=292019
Summary [Screen Time Refactoring] Apps glitch due to ScreenTimeWebExtension
Jessica Cheung
Reported 2025-04-24 11:16:24 PDT
Attachments
Jessica Cheung
Comment 1 2025-04-25 14:04:57 PDT
EWS
Comment 2 2025-04-28 17:00:44 PDT
Committed 294226@main (2302a8a6064a): <https://commits.webkit.org/294226@main> Reviewed commits have been landed. Closing PR #44532 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.